--- a/day03/exec/package.json
+++ b/day03/exec/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "sha1": "^1.1.1"
   }
 }
