--- a/03_react/5.react-redux/package.json
+++ b/03_react/5.react-redux/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "react-cli",
+  "name": "5.react-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.8.0",
-    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "babel-plugin-import": "^1.8.0"
   }
 }
